Change log for mrcfile
======================

For next version
----------------

* mrcfile is now available through conda-forge (thanks to Billy Poon)
* Fix bug in stats calculations when an empty array is passed to set_data()

Version 1.1.2 (2019-01-23)
--------------------------

* Fix incompatibility with numpy 1.16 by reading files into mutable bytearrays
  instead of immutable bytes objects. Note this will cause slower reading of
  bzip2-compressed files on Python 2 because Python 2's bz2 module does not
  support reading directly into a bytearray and therefore the data must be
  copied.
* Check that the file is large enough when reading the extended header.
  (Previously, the size was only checked for reading the data array.)

Version 1.1.1 (2019-01-17)
--------------------------

* Add automated tests for numpy 1.15 and Python 3.7
* Set maximum numpy version to 1.15 to avoid known incompatibility with 1.16

Version 1.1.0 (2018-11-21)
--------------------------

* Add open_async() function for background file loading
* Add new_mmap() function for fast creation of large files
* Speed up mrcfile-header command line tool by reading headers only, not data
* Allow opening of files with incorrect machine stamps in permissive mode
* Fix bug in validation of exttyp field in Python 3 (thanks to Holger Kohr)
* Fix bug in opening files with misleading exttyp information
* Update documentation to point to Python 3.6 instead of 2.7, and fix all
  cross-references
* Other documentation improvements

Version 1.0.4 (2018-01-22)
--------------------------

* Add command-line tools ('mrcfile-validate' and 'mrcfile-header') for easy MRC
  file validation and header viewing

Version 1.0.3 (2018-01-19)
--------------------------

* Fix bugs due to changed behaviour in numpy 1.14
* Add automated tests for numpy 1.13 and 1.14

Version 1.0.2 (2018-01-18)
--------------------------

* Add support for FEI-format extended headers
* Documentation improvements
