@@ -1,7 +1,7 @@
 # Config file for tox
 [tox]
 envlist =
-    {py27,py34,py35}-numpy{1.11,1.12,1.13,1.14,1.15,1.16},
+    {py27,py34,py35}-numpy{1.12,1.13,1.14,1.15,1.16},
     py35-numpy{1.17,1.18},
     py36-numpy{1.12,1.13,1.14,1.15,1.16,1.17,1.18,1.19},
     py37-numpy{1.15,1.16,1.17,1.18,1.19},
@@ -12,7 +12,6 @@ envlist =
 # matrix of test environments
 [testenv]
 deps =
-    numpy1.11: numpy >= 1.11.0, < 1.12.0
     numpy1.12: numpy >= 1.12.0, < 1.13.0
     numpy1.13: numpy >= 1.13.0, < 1.14.0
     numpy1.14: numpy >= 1.14.0, < 1.15.0
@@ -38,8 +37,8 @@ commands=
 # Setup for Travis build
 [travis]
 os =
-    linux: {py27,py34,py35}-numpy{1.11,1.12,1.13,1.14,1.15,1.16}, py35-numpy{1.17,1.18}, py36-numpy{1.12,1.13,1.14,1.15,1.16,1.17,1.18,1.19}, py37-numpy{1.15,1.16,1.17,1.18,1.19}, py38-numpy{1.17,1.18,1.19}, py39-numpy1.19, docs
-    osx: {py27,py34,py35}-numpy{1.11,1.12,1.13,1.14,1.15,1.16}, py35-numpy{1.17,1.18}, py36-numpy{1.12,1.13,1.14,1.15,1.16,1.17,1.18,1.19}, py37-numpy{1.15,1.16,1.17,1.18,1.19}, py38-numpy{1.17,1.18,1.19}, py39-numpy1.19
+    linux: {py27,py34,py35}-numpy{1.12,1.13,1.14,1.15,1.16}, py35-numpy{1.17,1.18}, py36-numpy{1.12,1.13,1.14,1.15,1.16,1.17,1.18,1.19}, py37-numpy{1.15,1.16,1.17,1.18,1.19}, py38-numpy{1.17,1.18,1.19}, py39-numpy1.19, docs
+    osx: {py27,py34,py35}-numpy{1.12,1.13,1.14,1.15,1.16}, py35-numpy{1.17,1.18}, py36-numpy{1.12,1.13,1.14,1.15,1.16,1.17,1.18,1.19}, py37-numpy{1.15,1.16,1.17,1.18,1.19}, py38-numpy{1.17,1.18,1.19}, py39-numpy1.19
 python =
     2.7: py27
     3.4: py34
